--- a/Experiment5.html
+++ b/Experiment5.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="border: 2px solid black; align :center; padding: 20px; max-width: 1000px; margin: auto; height: 600px;" >
+<body style="border: 2px solid black; align-items :center; padding: 20px; max-width: 1000px; margin: auto; height: 600px;" >
    <h1 >Student Registration Form</h1>
    <hr>
     <form action="#" method="POST">
